Bug#52228 : MySQL Cluster : DDL during data node upgrade results in client hanging